# __pp-cuda-2022

./: .gitignore  CMakeLists.txt
src/: imports.hpp  main.cu
src/utils/: color.hpp  common.cu  common.hpp  console.hpp
